Feat: AI Face Swap for Today's Pick & UI Improvements
- Add user face image upload feature
- Update AI generation prompt for barefoot & skin tone matching
- Refactor Today's Pick UI (Weather widget, Toggle info)
- Auto-migrate face_image_path column

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -68,3 +68,6 @@ __tablestorage__
 AzuriteConfig
 google_credentials.json
 service_account.json
+
+FEW_SHOT_GUIDE.md
+IMAGE_GENERATION_OPTIMIZATION.md
