--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,6 +19,9 @@ dependencies = [
     "google-cloud-aiplatform>=1.0.0",
     "sqlalchemy>=2.0.0",
     "psycopg2-binary>=2.9.0",
+    "supabase>=2.3.0",
+    "google-genai>=0.1.0",
+    "httpx>=0.27.0",
 ]
 
 [dependency-groups]
