--- a/.env.example
+++ b/.env.example
@@ -77,3 +77,7 @@ CORS_ORIGINS=http://localhost:3000,http://localhost:5173,http://127.0.0.1:3000,h
 # STRIPE_SECRET_KEY=sk_test_...
 # GOOGLE_ANALYTICS_ID=GA-XXXXXXXXX
 # SENTRY_DSN=https://[your-sentry-dsn]
+
+# --- Virtual Wardrobe Image Processing ---
+# 옷 이미지 처리를 위한 선택적 서비스 설정
+# REMOVE_BG_API_KEY=your_remove_bg_api_key_here  # https://www.remove.bg/api
