--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "backend"
 version = "0.1.0"
-description = "Backend API server (FastAPI/Azure Functions)"
+description = "Backend API server (FastAPI)"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.110.0",
@@ -22,6 +22,11 @@ dependencies = [
     "supabase>=2.3.0",
     "google-genai>=0.1.0",
     "httpx>=0.27.0",
+    "rembg>=2.0.59",
+    "onnxruntime>=1.19.2",
+    "numpy>=1.26.0",
+    "numba==0.59.1",
+    "llvmlite==0.42.0",
 ]
 
 [dependency-groups]
